# blackbox

./: BUSINESS_PLAN.md  BUSINESS_PLAN.tex  BUSINESS_PLAN_NEW.md  BUSINESS_PLAN_NEW_DETAILED.md  BUSINESS_PLAN_NEW_DETAILED.tex  IMPORTANT.MD  README.md  build_all.sh  gitblah-YwbS  launch_enterprise.bat  launch_enterprise.sh
TODO/: AI_IMPORTANT.md  PRICE.md  SECTIONS.md  blackbox-sentry.md  progress.md
TODO/AI/: 01.md  02.md  BEST_PAPERS.md  SSL_AND_RL.md  SSL_CODE.md
TODO/CHANGES_SHOULD_DO_TO_USE_NEW_XINFER/: 01.md  ALL_CHANGES_SHOULD_DO.md
TODO/EXTENSION/: 01.md  EXTENSION_TABLE.md
TODO/FUTURE/: AI_IMPROVEMENT.md  FUTURE_IMPORTANT.md  TINY_FEATURES.md  TO_ENTERPRISE_FEATURES.md
TODO/FUTURE/SELF_HEALING/: DATASETS.md  INDUSTRY_4_0.md  INTRO.md  XTORCH_XINFER_SELF_HEALING.md
TODO/LOGS/: OS_SPECIFIC_LOG_TRAILER.md
TODO/NETWORK/: HONEY.md  MAKE_PERFECT.md  MEMORY_HUNTER.md  SNIFFING.md  XDR_RELATED.md
TODO/REPORTS/: 2025-12-15.md
TODO/SIMULATOR/: 01.md  02.md
TODO/tests/: 01.md  02.md  03.md
blackbox-accelerator/: CMakeLists.txt  README.md
blackbox-accelerator/include/: bb_accelerator.h
blackbox-accelerator/src/hls/: packet_filter.cpp
blackbox-accelerator/src/host/: driver.cpp
blackbox-architect/: README.md
blackbox-commander/: README.md
blackbox-core/: CMakeLists.txt  README.md
blackbox-core/docker/: Dockerfile
blackbox-core/include/blackbox/analysis/: alert_manager.h  block_list_manager.h  inference_engine.h
blackbox-core/include/blackbox/common/: crash_handler.h  id_generator.h  logger.h  metrics.h  settings.h  signal_handler.h  string_utils.h
blackbox-core/include/blackbox/core/: admin_server.h  application.h  pipeline.h
blackbox-core/include/blackbox/enrichment/: geoip_service.h
blackbox-core/include/blackbox/ingest/: netflow_server.h  ring_buffer.h  tcp_server.h  udp_server.h
blackbox-core/include/blackbox/network/: netflow_v5.h
blackbox-core/include/blackbox/parser/: parser_engine.h  tokenizer.h
blackbox-core/include/blackbox/storage/: clickhouse_client.h  storage_engine.h
blackbox-core/src/analysis/: alert_manager.cpp  inference_engine.cpp  model_loader.cpp  rule_engine.cpp
blackbox-core/src/common/: crash_handler.cpp  metrics.cpp  performance_timer.cpp  settings.cpp  string_utils.cpp  time_utils.cpp
blackbox-core/src/core/: application.cpp  pipeline.cpp
blackbox-core/src/enrichment/: geoip_service.cpp
blackbox-core/src/ingest/: netflow_server.cpp  rate_limiter.cpp  udp_server.cpp
blackbox-core/src/parser/: feature_scaler.cpp  parser_engine.cpp  tokenizer.cpp
blackbox-core/src/storage/: storage_engine.cpp
blackbox-deploy/: Makefile  README.md
blackbox-deploy/compose/: docker-compose.yml
blackbox-hud/: .env  README.md
blackbox-hud/src/: App.tsx
blackbox-hud/src/api/: client.ts
blackbox-hud/src/components/visualizations/: VelocityChart.tsx
blackbox-hud/src/pages/: Dashboard.tsx
blackbox-hud/src/store/: useTelemetryStore.ts
blackbox-hud/src/types/: models.ts
blackbox-matrix/: README.md  orchestrator.py  setup_qemu.sh
blackbox-matrix/behaviors/: db_slow_exfil.json  edge_ai_normal.json  ics_hmi_compromised.json  ics_plc_normal.json  iot_mirai_infect.json  iot_normal.json  server_web_normal.json  web_app_sql_normal.json  win_office_worker.json  win_ransomware_attack.json
blackbox-matrix/scenarios/: 01_baseline_load.yaml  02_mirai_botnet.yaml  03_factory_meltdown.yaml  04_ransomware_outbreak.yaml  05_data_exfil.yaml
blackbox-matrix/virtual-devices/common/: actor.py
blackbox-matrix/virtual-devices/iot-arm32/: Dockerfile
blackbox-matrix/virtual-devices/jetson-arm64/: Dockerfile
blackbox-matrix/virtual-devices/server-linux/: Dockerfile
blackbox-relay/: Dockerfile  README.md  setup_relay.bat  setup_relay.sh
blackbox-relay/cmd/relay/: main.go
blackbox-relay/config/: config.go
blackbox-relay/internal/integrations/: slack.go
blackbox-relay/internal/queue/: consumer.go
blackbox-reporter/: README.md
blackbox-sentry/: README.md
blackbox-sentry-micro/: CMakeLists.txt  README.md
blackbox-sentry-micro/include/: config.h  sentry.h
blackbox-sentry-micro/include/collectors/: sys_stats.h
blackbox-sentry-micro/include/hal/: net.h  sys.h  time.h
blackbox-sentry-micro/include/proto/: pb.h  pb_wrapper.h  telemetry.pb.h
blackbox-sentry-micro/include/transport/: client_tcp.h
blackbox-sentry-micro/src/: main.c
blackbox-sentry-micro/src/collectors/: sys_stats.c
blackbox-sentry-micro/src/core/: agent.c
blackbox-sentry-micro/src/hal/linux/: net_posix.c  sys_posix.c  time_posix.c
blackbox-sentry-micro/src/proto/: pb_encode.c  pb_wrapper.c  telemetry_mock.c
blackbox-sentry-micro/src/transport/: client_tcp.c
blackbox-sentry/src/shipper/: tcp_client.h
blackbox-sim/: README.md
blackbox-sim/src/common/: types.py
blackbox-sim/src/interfaces/: i_loader.py
blackbox-sim/src/models/: autoencoder.py
blackbox-sim/src/preprocessing/: scaler.py
blackbox-tests/: README.md  run_all.sh
blackbox-tests/core/: CMakeLists.txt  main.cpp
blackbox-tests/core/ingest/: test_rate_limiter.cpp  test_ring_buffer.cpp
blackbox-tests/core/parser/: test_parser_engine.cpp  test_string_utils.cpp
blackbox-tests/sim/models/: test_autoencoder.py
blackbox-tests/tower/: main_test.go
blackbox-tests/tower/api/: health_test.go
blackbox-tower/: README.md
blackbox-tower/config/: config.yaml
blackbox-tower/internal/api/: router.go
blackbox-tower/internal/api/handlers/: auth_handler.go  query_handler.go
blackbox-tower/internal/api/middleware/: cors.go
blackbox-tower/internal/storage/: redis_listener.go  repository.go
blackbox-tower/internal/websocket/: client.go  hub.go
blackbox-vacuum/: README.md  docker-compose.yml  main.go  setup_vacuum.bat  setup_vacuum.sh
blackbox-vacuum/internal/collector/: interface.go  registry.go
blackbox-vacuum/internal/config/: loader.go
blackbox-vacuum/internal/server/: handlers.go  server.go
blackbox-vacuum/internal/transport/: core_client.go
blackbox-vacuum/pkg/utils/: json_fmt.go  sanitizer.go
(+8 files in other folders)
